fix test on Windows